# Signature-SNVs

./: .gitignore  DESCRIPTION.txt  LICENSE.txt  README.md  inquiries.md  pyproject.toml  setup.cfg 
analyses/FEAST_source_tracking_code/: SourceTrackingScript.R  preprocessing.R
analyses/backhed_study/: PaperPlot_Backhed_Time.R  plotting_Brooks.R  plotting_backhed.R
analyses/compare_instrain/: analysis.R  get_compare_ids.R  making_list_scaffold.R  run_instrain.sh  run_instrain_batch.sh  run_instrain_compare.sh  run_instrain_compare_batch.sh
analyses/compare_nayfach/: all_inclusion.csv  analysis.R  get_inclusion_list.R  plot_analysis.R  test_files.R
analyses/generate_examples/: example1.R
analyses/simulation_study/: plotting_simulation_fig2.R  plotting_simulation_robustness.R  robust_calculations.R
analyses/tara_study/: plotting_tara_functions.R  plotworld.R  tara_stationary.R
configs/: config.yaml
example_1/: FEAST_metadata.csv  config.yaml  metadata.csv
example_1/signature_snvs/: Signature_SNVs_Bacteroides_uniformis_57318_region_1_200_fam_Test1_counts.csv.bz2  Signature_SNVs_Bacteroides_uniformis_57318_region_1_200_fam_Test2_counts.csv.bz2  Signature_SNVs_Bacteroides_uniformis_57318_region_1_200_fam_Test3_counts.csv.bz2  Signature_SNVs_Bacteroides_uniformis_57318_region_1_200_fam_Test4_counts.csv.bz2  Summary_Stats_Signature_SNVs_Bacteroides_uniformis_57318_region_1_200_LRs.csv  (+1 more)
example_2/: .Rhistory  FEAST_metadata.csv  demo_source_contributions_matrix.txt  sink_source.csv
example_template/: metadata.csv  sink_source.csv
postprocessing/: Step1_cat_withinstrain.sh  Step1_qsub.sh  Step2_catzip_acrossstrain.sh  Step2_qsub.sh
preprocessing/: Step1_qsub_get_file_lengths.sh  Step1_run_get_file_lengths.sh  Step2_make_file_lengths.sh
tests/: unit_test.py
(+54 files in other folders)
