[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Signature-SNVs"
version = "0.0.1"
authors = [
  { name="Leah Briscoe, Eran Halperin, Nandita Garud", email="leahpbriscoe@gmail.com" },
]
description = "A package to produce signature SNVs for source tracking with methods like FEAST. Given a set of samples representing the sink and source of interest, and a species for which you have snps MIDAS output, you can run this method."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ['numpy>=1.20.3','scipy>=1.7.1','pyyaml>=6.0','pandas>=1.3.4','bz2file>=0.98']

[project.urls]
"Homepage" = "https://github.com/garudlab/Signature-SNVs"
"Bug Tracker" = "https://github.com/garudlab/Signature-SNVs/issues"
